<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ash_1"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/add_msg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1.5"
        android:ems="10"
        android:hint="@string/add_msg_hint"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="0.5"
        android:padding="5dp" >

        <EditText
            android:id="@+id/add_txt_tel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/add_tel_hint"
            android:inputType="phone"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/add_btn_pb"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/add_btn_pick_contact"
            android:paddingLeft="3dp"
        	android:paddingRight="3dp"
            android:scaleType="fitXY"
            android:background="@drawable/btncontacts" />
    </LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="0.8"
        android:padding="5dp" >
        
    <Button
        android:id="@+id/add_btn_pick_date"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/add_btn_setdatetime"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/btnconfigdt" />

    <TextView
        android:id="@+id/add_txt_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_schedule_txt"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    
    <FrameLayout
        android:id="@+id/add_layout_adz"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:layout_margin="5dp" >

    </FrameLayout>

</LinearLayout>